# Password-Generator-Website-Rust

./: Cargo.toml  index.html  netlify.toml  style.scss
docs/: index.html  password-generator-8c0e25ec43d638ed.js  password-generator-8c0e25ec43d638ed_bg.wasm  style-ab29bcc110ed6baf.css
src/: app.rs  text_input.rs
