[package]
name = "password-generator"
version = "0.1.0"
edition = "2021"
author = "Anjishnu Ganguly"
[dependencies]

yew = { version = "0.20.0", features = ["csr"] }
zxcvbn = "2.2.2"
time = "0.3.30"
js-sys = "0.3.64"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }
